# Copyright 2016 The Chromium Authors. All rights reserved.
# Use of this source code is governed by a BSD-style license that can be
# found in the LICENSE file.

import("//mojo/public/mojo_application.gni")

mojo_native_application("flog_viewer") {
  sources = [
    "accumulator.cc",
    "accumulator.h",
    "channel_handler.cc",
    "channel_handler.h",
    "counted.h",
    "flog_viewer.cc",
    "flog_viewer.h",
    "flog_viewer_app.cc",
    "formatting.cc",
    "formatting.h",
    "handlers/default.cc",
    "handlers/default.h",
    "tracked.h",
  ]

  deps = [
    "//base",
    "//mojo/application",
    "//mojo/environment:chromium",
    "//mojo/public/cpp/bindings",
    "//mojo/public/cpp/utility",
    "//mojo/public/interfaces/application",
    "//mojo/services/flog/interfaces",
  ]
}
