# Copyright 2016 The Chromium Authors. All rights reserved.
# Use of this source code is governed by a BSD-style license that can be
# found in the LICENSE file.

import("//mojo/public/mojo_application.gni")

mojo_native_application("flog_viewer") {
  sources = [
    "accumulator.cc",
    "accumulator.h",
    "channel.cc",
    "channel.h",
    "channel_handler.cc",
    "channel_handler.h",
    "counted.h",
    "flog_viewer.cc",
    "flog_viewer.h",
    "flog_viewer_app.cc",
    "formatting.cc",
    "formatting.h",
    "handlers/default.cc",
    "handlers/default.h",
    "handlers/media/media_decoder_digest.cc",
    "handlers/media/media_decoder_digest.h",
    "handlers/media/media_decoder_full.cc",
    "handlers/media/media_decoder_full.h",
    "handlers/media/media_demux_digest.cc",
    "handlers/media/media_demux_digest.h",
    "handlers/media/media_demux_full.cc",
    "handlers/media/media_demux_full.h",
    "handlers/media/media_formatting.cc",
    "handlers/media/media_formatting.h",
    "handlers/media/media_packet_consumer_digest.cc",
    "handlers/media/media_packet_consumer_digest.h",
    "handlers/media/media_packet_consumer_full.cc",
    "handlers/media/media_packet_consumer_full.h",
    "handlers/media/media_packet_producer_digest.cc",
    "handlers/media/media_packet_producer_digest.h",
    "handlers/media/media_packet_producer_full.cc",
    "handlers/media/media_packet_producer_full.h",
    "handlers/media/media_player_digest.cc",
    "handlers/media/media_player_digest.h",
    "handlers/media/media_player_full.cc",
    "handlers/media/media_player_full.h",
    "handlers/media/media_sink_digest.cc",
    "handlers/media/media_sink_digest.h",
    "handlers/media/media_sink_full.cc",
    "handlers/media/media_sink_full.h",
    "tracked.h",
  ]

  deps = [
    "//base",
    "//mojo/application",
    "//mojo/environment:chromium",
    "//mojo/public/cpp/bindings",
    "//mojo/public/cpp/utility",
    "//mojo/public/interfaces/application",
    "//mojo/services/flog/interfaces",
    "//mojo/services/media/common/interfaces",
    "//mojo/services/media/control/interfaces",
    "//mojo/services/media/logs/interfaces",
  ]
}
