# Copyright 2015 The Chromium Authors. All rights reserved.
# Use of this source code is governed by a BSD-style license that can be
# found in the LICENSE file.

import("//mojo/public/mojo_sdk.gni")

# Untrusted code
if (is_nacl) {
  # Unit test for the Mojo public C API.
  # TODO(vtl): Should also have a test for the C++ API?
  executable("monacl_test") {
    testonly = true
    sources = []
    deps = [
      "//mojo/public/c/system/tests",
      "//mojo/public/platform/nacl:mojo",
      "//testing/gtest",
      "//testing/gtest:gtest_main",
    ]
  }

  group("mojo_nacl_tests_untrusted") {
    testonly = true
    deps = [
      ":monacl_test",
      "//examples/apptest",
      "//examples/wget",
      "//services/clipboard",
      "//services/clipboard:apptests",
      "//services/files:apptests",
      "//services/http_server",
      "//services/http_server:apptests",
      "//shell:apptests",
    ]
  }
}
