# Copyright 2016 The Chromium Authors. All rights reserved.
# Use of this source code is governed by a BSD-style license that can be
# found in the LICENSE file.

import("//mojo/public/mojo_application.gni")

mojo_native_application("motown_video") {
  output_name = "motown_video"

  sources = [
    "main.cc",
    "motown_video_app.cc",
    "motown_video_app.h",
    "motown_video_view.cc",
    "motown_video_view.h",
  ]

  deps = [
    "//base",
    "//mojo/application",
    "//mojo/environment:chromium",
    "//mojo/gpu",
    "//mojo/public/c:gpu",
    "//mojo/public/cpp/bindings",
    "//mojo/public/cpp/environment",
    "//mojo/public/cpp/system",
    "//mojo/services/flog/cpp",
    "//mojo/services/geometry/cpp",
    "//mojo/services/geometry/interfaces",
    "//mojo/services/gfx/composition/interfaces",
    "//mojo/services/input_events/interfaces",
    "//mojo/services/media/audio/interfaces",
    "//mojo/services/media/common/cpp",
    "//mojo/services/media/common/interfaces",
    "//mojo/services/media/control/interfaces",
    "//mojo/services/media/core/interfaces",
    "//mojo/services/ui/input/interfaces",
    "//mojo/services/ui/views/interfaces",
    "//mojo/ui",
    "//mojo/ui:gl",
  ]
}
