# Copyright 2016 The Chromium Authors. All rights reserved.
# Use of this source code is governed by a BSD-style license that can be
# found in the LICENSE file.

import("../mojo_sdk.gni")

config("c_config") {
  include_dirs = [ "include" ]
}

# Catch-all for all public C headers/libraries, except for the bindings.
group("c") {
  public_deps = [
    ":common",
    ":system",
  ]
}

# Headers in include/mojo (to be included as <mojo/HEADER.h>).
mojo_sdk_source_set("common") {
  public_configs = [ ":c_config" ]

  sources = [
    "include/mojo/macros.h",
    "include/mojo/result.h",
  ]
}

# Headers in include/mojo/environment (to be included as
# <mojo//environment/HEADER.h>).
mojo_sdk_source_set("environment") {
  public_configs = [ ":c_config" ]

  sources = [
    "include/mojo/environment/async_waiter.h",
    "include/mojo/environment/logger.h",
  ]

  public_deps = [
    ":system",
  ]
}

# Headers in include/mojo/system (to be included as <mojo/system/HEADER.h>).
mojo_sdk_source_set("system") {
  public_configs = [ ":c_config" ]

  sources = [
    "include/mojo/system/buffer.h",
    "include/mojo/system/data_pipe.h",
    "include/mojo/system/handle.h",
    "include/mojo/system/main.h",
    "include/mojo/system/message_pipe.h",
    "include/mojo/system/time.h",
    "include/mojo/system/wait.h",
    "include/mojo/system/wait_set.h",
  ]

  public_deps = [
    ":common",
  ]
}
